--- a/charts/stable/vikunja/questions.yaml
+++ b/charts/stable/vikunja/questions.yaml
@@ -360,7 +360,7 @@ questions:
                           - value: file
                             description: File
                           - value: "off"
-                            level: "Off"
+                            description: "Off"
                     - variable: level
                       label: Level
                       description: Change the log level.
