feat(common): readd TrueCharts specific features to refactor (#292)
**Description**
This PR re-adds TrueCharts specific portions back into the refactor done
by iX-Systems to the common-chart

**⚙️ Type of change**

- [ ] ⚙️ Feature/App addition
- [ ] 🪛 Bugfix
- [ ] ⚠️ Breaking change (fix or feature that would cause existing
functionality to not work as expected)
- [ ] 🔃 Refactor of current code

**🧪 How Has This Been Tested?**
<!--
Please describe the tests that you ran to verify your changes. Provide
instructions so we can reproduce. Please also list any relevant details
for your test configuration
-->

**📃 Notes:**
<!-- Please enter any other relevant information here -->

**✔️ Checklist:**

- [ ] ⚖️ My code follows the style guidelines of this project
- [ ] 👀 I have performed a self-review of my own code
- [ ] #️⃣ I have commented my code, particularly in hard-to-understand
areas
- [ ] 📄 I have made corresponding changes to the documentation
- [ ] ⚠️ My changes generate no new warnings
- [ ] 🧪 I have added tests to this description that prove my fix is
effective or that my feature works
- [ ] ⬆️ I increased versions for any altered app according to semantic
versioning

**➕ App addition**

If this PR is an app addition please make sure you have done the
following.

- [ ] 🪞 I have opened a PR on
[truecharts/containers](https://github.com/truecharts/containers) adding
the container to TrueCharts mirror repo.
- [ ] 🖼️ I have added an icon in the Chart's root directory called
`icon.png`

---

_Please don't blindly check all the boxes. Read them and only check
those that apply.
Those checkboxes are there for the reviewer to see what is this all
about and
the status of this PR with a quick glance._

Co-authored-by: Stavros kois <s.kois@outlook.com>
Co-authored-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

--- a/.github/workflows/common_library_tests.yaml
+++ b/.github/workflows/common_library_tests.yaml
@@ -16,7 +16,7 @@ jobs:
         helm-version:
           - v3.9.4
           - v3.10.3
-          - v3.11.0-rc.2
+          - v3.11.0
     steps:
       - name: Checkout
         uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
@@ -56,7 +56,7 @@ jobs:
         helm-version:
           - v3.9.4
           - v3.10.3
-          - v3.11.0-rc.2
+          - v3.11.0
     steps:
       - name: Checkout
         uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
@@ -73,6 +73,7 @@ jobs:
         with:
           path: |
             /home/runner/.local/share/helm/plugins/helm-unittest
+            /tmp/_dist/
           key: helm-${{ matrix.helm-version }}-unittest-v${{ env.helmUnitVersion }}
           restore-keys: |
             helm-${{ matrix.helm-version }}-unittest-v${{ env.helmUnitVersion }}
@@ -80,7 +81,7 @@ jobs:
       - name: Run Unittests
         shell: bash
         run: |
-          (helm unittest -h > /dev/null) || helm plugin install https://github.com/quintush/helm-unittest --version v${helmUnitVersion} || (sleep 10 && helm plugin install https://github.com/quintush/helm-unittest --version v${helmUnitVersion})
+          (helm unittest -h > /dev/null) || helm plugin install https://github.com/quintush/helm-unittest --version v${helmUnitVersion} || (sleep 10 && helm plugin install https://github.com/quintush/helm-unittest --version v${helmUnitVersion}) || echo "finished unittest reinstall tries"
 
           # Run tests
           cd library/common-test/
@@ -111,6 +112,12 @@ jobs:
           - rbac-values.yaml
           - secrets-values.yaml
           - statefulset-values.yaml
+          - ingress-values.yaml
+          - networkPolicy-values.yaml
+          - codeserver-values.yaml
+          - metrics-values.yaml
+          - manifest-values.yaml
+          - stagingmanifest-values.yaml
 
     steps:
       - name: Checkout
@@ -186,7 +193,7 @@ jobs:
           mv -f library/common-test/runtests/${{ matrix.values }} library/common-test/values.yaml
 
           # Stat kail on the background to grab logs from tests
-          ./kail --ignore-ns kube-system >> /tmp/output.log &
+          ./kail --ignore-ns kube-system --ignore-ns cert-manager --ignore-ns metallb-system  --ignore-ns prometheus-operator >> /tmp/output.log &
 
           # Actually run the test
           ct install  --config .github/ct-install-config/ct-install.yaml \
