--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,8 @@ charts/*/Chart.lock
 charts/*/charts
 helper-charts/*/Chart.lock
 helper-charts/*/charts
+library/*/Chart.lock
+library/*/charts
+library/**/charts/*.tgz
+library/**/render/*
+library/library/common-test/charts/
