--- a/charts/incubator/plexripper/values.yaml
+++ b/charts/incubator/plexripper/values.yaml
@@ -1,34 +1,28 @@
-env: {}
 image:
   pullPolicy: IfNotPresent
   repository: tccr.io/truecharts/plexripper
   tag: latest@sha256:1f07e5f0d82bb7cca4c1730296b2758aa4d30c538284fabd13788c8e53dd0bd2
-persistence:
-  config:
-    enabled: true
-    mountPath: /config
-  downloadfolder:
-    enabled: true
-    mountPath: /downloads
-  moviedestinationfolder:
-    enabled: true
-    mountPath: /movies
-  tv-showdestinationfolder:
-    enabled: true
-    mountPath: /tvshows
+
 podSecurityContext:
   runAsGroup: 0
   runAsUser: 0
+
 securityContext:
   readOnlyRootFilesystem: false
   runAsNonRoot: false
+
 service:
   main:
     ports:
       main:
         port: 7000
-        protocol: TCP
+        protocol: HTTTP
         targetPort: 7000
+
+persistence:
+  config:
+    enabled: true
+    mountPath: /config
 
 portal:
   enabled: true
