--- a/charts/incubator/plexripper/values.yaml
+++ b/charts/incubator/plexripper/values.yaml
@@ -16,7 +16,7 @@ service:
     ports:
       main:
         port: 7000
-        protocol: HTTTP
+        protocol: HTTP
         targetPort: 7000
 
 persistence:
