--- a/templates/questions/ingress/ingressDefault.yaml
+++ b/templates/questions/ingress/ingressDefault.yaml
@@ -5,6 +5,12 @@
                   default: false
                   show_subquestions_if: true
                   subquestions:
+                    - variable: clusterIssuer
+                      label: clusterIssuer
+                      description: 'add the name of your cert-manager clusterIssuer here for automatic tls certificates. Cannot be used combined with tls option below'
+                      schema:
+                        type: string
+                        default: "/"
                     - variable: hosts
                       label: Hosts
                       schema:
