--- a/templates/questions/ingress/ingressList.yaml
+++ b/templates/questions/ingress/ingressList.yaml
@@ -27,6 +27,12 @@
                 schema:
                   type: string
                   default: ""
+              - variable: clusterIssuer
+                label: clusterIssuer
+                description: 'add the name of your cert-manager clusterIssuer here for automatic tls certificates. Cannot be used combined with tls option below'
+                schema:
+                  type: string
+                  default: "/"
               - variable: hosts
                 label: Hosts
                 schema:
