--- a/templates/questions/ingress/ingressList.yaml
+++ b/templates/questions/ingress/ingressList.yaml
@@ -32,7 +32,7 @@
                 description: 'add the name of your cert-manager clusterIssuer here for automatic tls certificates. Cannot be used combined with tls option below'
                 schema:
                   type: string
-                  default: "/"
+                  default: ""
               - variable: hosts
                 label: Hosts
                 schema:
