--- a/templates/questions/ingress/ingressList.yaml
+++ b/templates/questions/ingress/ingressList.yaml
@@ -95,6 +95,7 @@
                 schema:
                   type: list
                   default: []
+                  show_if: [["clusterIssuer", "!=", ""]]
                   items:
                     - variable: tlsEntry
                       label: Host
@@ -115,11 +116,25 @@
                                     default: ""
                                     required: true
                           - variable: scaleCert
-                            label: Select TrueNAS SCALE Certificate
-                            schema:
-                              type: int
-                              $ref:
-                                - "definitions/certificate"
+                                - variable: clusterIssuer
+                                  label: clusterIssuer
+                                  description: 'add the name of your cert-manager clusterIssuer here for automatic tls certificates. Cannot be used combined with tls option below'
+                                  schema:
+                                    type: string
+                                    default: ""
+                                - variable: scaleCert
+                                  label: Use TrueNAS SCALE Certificate (Deprecated)
+                                  schema:
+                                    show_if: [["clusterIssuer", "!=", ""]]
+                                    type: int
+                                    $ref:
+                                      - "definitions/certificate"
+                                - variable: secretName
+                                  label: Use Custom Secret (Advanced)
+                                  schema:
+                                    type: string
+                                    show_if: [["clusterIssuer", "!=", ""]]
+                                    default: ""
               - variable: entrypoint
                 label: Traefik Entrypoint
                 description: Entrypoint used by Traefik when using Traefik as Ingress Provider
