--- a/templates/questions/ingress/ingressList.yaml
+++ b/templates/questions/ingress/ingressList.yaml
@@ -95,7 +95,7 @@
                 schema:
                   type: list
                   default: []
-                  show_if: [["clusterIssuer", "!=", ""]]
+                  show_if: [["clusterIssuer", "=", ""]]
                   items:
                     - variable: tlsEntry
                       label: Host
@@ -124,7 +124,7 @@
                           - variable: scaleCert
                             label: Use TrueNAS SCALE Certificate (Deprecated)
                             schema:
-                              show_if: [["clusterIssuer", "!=", ""]]
+                              show_if: [["clusterIssuer", "=", ""]]
                               type: int
                               $ref:
                                 - "definitions/certificate"
@@ -132,7 +132,7 @@
                             label: Use Custom Secret (Advanced)
                             schema:
                               type: string
-                              show_if: [["clusterIssuer", "!=", ""]]
+                              show_if: [["clusterIssuer", "=", ""]]
                               default: ""
               - variable: entrypoint
                 label: Traefik Entrypoint
