Apply suggestions from code review
Signed-off-by: Kjeld Schouten-Lebbing <kjeld@schouten-lebbing.nl>

--- a/templates/questions/ingress/ingressList.yaml
+++ b/templates/questions/ingress/ingressList.yaml
@@ -116,8 +116,8 @@
                                     default: ""
                                     required: true
                           - variable: clusterIssuer
-                            label: clusterIssuer
-                            description: 'add the name of your cert-manager clusterIssuer here for automatic tls certificates. Cannot be used combined with tls option below'
+                            label: Use Cert-Manager clusterIssuer
+                            description: 'add the name of your Cert-Manager clusterIssuer here for automatic tls certificates.'
                             schema:
                               type: string
                               default: ""
