--- a/templates/questions/ingress/ingressTLS.yaml
+++ b/templates/questions/ingress/ingressTLS.yaml
@@ -1,3 +1,9 @@
+                    - variable: clusterIssuer
+                      label: clusterIssuer
+                      description: 'add the name of your cert-manager clusterIssuer here for automatic tls certificates. Cannot be used combined with tls option below'
+                      schema:
+                        type: string
+                        default: ""
                     - variable: tls
                       label: TLS-Settings
                       schema:
