--- a/charts/incubator/plexripper/values.yaml
+++ b/charts/incubator/plexripper/values.yaml
@@ -1,7 +1,7 @@
 image:
   pullPolicy: IfNotPresent
   repository: tccr.io/truecharts/plexripper
-  tag: latest@sha256:1f07e5f0d82bb7cca4c1730296b2758aa4d30c538284fabd13788c8e53dd0bd2
+  tag: 0.9.1@sha256:087f1d58cb963e1bbfd0c31d8fcb09f7719685e7647d668a49ebe21cbbef66c9
 
 podSecurityContext:
   runAsGroup: 0
