--- a/charts/stable/aria2/questions.yaml
+++ b/charts/stable/aria2/questions.yaml
@@ -20,6 +20,30 @@ questions:
             type: string
             private: true
             default: ""
+        - variable: DISK_CACHE
+          label: Disk Cache
+          description: Set up disk cache. SIZE can include K or M.
+          schema:
+            type: string
+            default: "64M"
+        - variable: IPV6_MODE
+          label: IPV6 Mode
+          description: Whether to enable IPv6 support for Aria2.
+          schema:
+            type: boolean
+            default: false
+        - variable: UPDATE_TRACKERS
+          label: Update Trackers
+          description: Whether to update BT Trackers List automatically.
+          schema:
+            type: boolean
+            default: true
+        - variable: CUSTOM_TRACKER_URL
+          label: Custom Trackers URL
+          description: Custom BT Trackers List URL.
+          schema:
+            type: string
+            default: "https://trackerslist.com/all_aria2.txt"
 # Include{containerConfig}
 # Include{serviceRoot}
         - variable: main
