--- a/charts/stable/aria2/values.yaml
+++ b/charts/stable/aria2/values.yaml
@@ -18,6 +18,10 @@ env:
   RPC_PORT: "{{ .Values.service.main.ports.main.port }}"
   LISTEN_PORT: "{{ .Values.service.listen.ports.listen.port }}"
   UMASK_SET: "{{ .Values.security.UMASK }}"
+  DISK_CACHE: 64M
+  IPV6_MODE: false
+  UPDATE_TRACKERS: false
+  CUSTOM_TRACKER_URL: "https://trackerslist.com/all_aria2.txt"
 
 service:
   main:
