fix(shoko-server) update tag and housekeeping

--- a/charts/incubator/shoko-server/values.yaml
+++ b/charts/incubator/shoko-server/values.yaml
@@ -1,24 +1,16 @@
-env: {}
 image:
-  pullPolicy: IfNotPresent
   repository: tccr.io/truecharts/shoko-server
-  tag: vdaily@sha256:ed296ad8c59864e88bb6244f1005e0e15512b4a8f58791f5aaf3ab95838fd77e
-persistence:
-  animefolder:
-    enabled: true
-    mountPath: /anime
-  appdata:
-    enabled: true
-    mountPath: /home/shoko/.shoko/
-  importfolder:
-    enabled: true
-    mountPath: /import
+  pullPolicy: IfNotPresent
+  tag: 4.1.2@sha256:5bde0f9457716b9142c6dd5827a1583f387dcdc6a971247f99b769a44f65fa5f
+
 podSecurityContext:
   runAsGroup: 0
   runAsUser: 0
+
 securityContext:
   readOnlyRootFilesystem: false
   runAsNonRoot: false
+
 service:
   main:
     ports:
@@ -26,6 +18,11 @@ service:
         port: 8111
         protocol: TCP
         targetPort: 8111
+
+persistence:
+  appdata:
+    enabled: true
+    mountPath: /home/shoko/.shoko/
 
 portal:
   enabled: true
