fix(minecraft-java) add USE_AIKAR_FLAGS

--- a/charts/stable/minecraft-java/Chart.yaml
+++ b/charts/stable/minecraft-java/Chart.yaml
@@ -9,6 +9,7 @@ description: Minecraft Java Dedicated Server
 home: https://truecharts.org/charts/stable/minecraft-java
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/minecraft-java.png
 keywords:
+  - minecraft-java
   - minecraft
 kubeVersion: ">=1.16.0-0"
 maintainers:
@@ -21,7 +22,7 @@ sources:
   - https://github.com/itzg/docker-minecraft-server
   - https://hub.docker.com/r/itzg/minecraft-server
 type: application
-version: 3.0.21
+version: 3.0.22
 annotations:
   truecharts.org/catagories: |
     - games
