--- a/charts/stable/minecraft-java/values.yaml
+++ b/charts/stable/minecraft-java/values.yaml
@@ -71,6 +71,7 @@ env:
   LEVEL: world
   ONLINE_MODE: true
   MEMORY: 2048M
+  USE_AIKAR_FLAGS: true
   # CUSTOM_SERVER: ""
   # QUILT_LOADER_VERSION: ""
   # QUILT_LAUNCHER: ""
