--- a/charts/stable/minecraft-java/ci/j11-values.yaml
+++ b/charts/stable/minecraft-java/ci/j11-values.yaml
@@ -1,7 +1,4 @@
-image:
-  repository: tccr.io/truecharts/minecraft-java11
-  tag: latest@sha256:ef6dc135581334d190cd635d3bead07370d60d9bd35df8367f6e5268d6681fb4
-  pullPolicy: Always
+imageSelector: j11Image
 
 env:
   VERSION: "1.16.1"
