--- a/charts/stable/minecraft-java/ci/j8-values.yaml
+++ b/charts/stable/minecraft-java/ci/j8-values.yaml
@@ -1,7 +1,4 @@
-image:
-  repository: tccr.io/truecharts/minecraft-java8-openj9
-  tag: latest@sha256:d63ca3899678fa48737a1a6e95c8edbf0a4a7c3c420a06d64e64b1b866799fb9
-  pullPolicy: Always
+imageSelector: j8Image
 
 env:
   VERSION: "1.16.1"
