--- a/charts/stable/minecraft-java/ci/j8j9-values.yaml
+++ b/charts/stable/minecraft-java/ci/j8j9-values.yaml
@@ -1,7 +1,4 @@
-image:
-  repository: tccr.io/truecharts/minecraft-java11-openj9
-  tag: latest@sha256:248ecbdca94efa8ab7c0b0437a0b59ba82ca9dabe6cd1f90a8cbd43319f15b82
-  pullPolicy: Always
+imageSelector: j8j9Image
 
 env:
   VERSION: "1.16.1"
