--- a/charts/stable/minecraft-java/values.yaml
+++ b/charts/stable/minecraft-java/values.yaml
@@ -19,6 +19,8 @@ j8j9Image:
   tag: latest@sha256:d63ca3899678fa48737a1a6e95c8edbf0a4a7c3c420a06d64e64b1b866799fb9
   pullPolicy: Always
 
+imageSelector: image
+
 securityContext:
   readOnlyRootFilesystem: false
   runAsNonRoot: false
