--- a/charts/stable/tt-rss/values.yaml
+++ b/charts/stable/tt-rss/values.yaml
@@ -11,17 +11,6 @@ podSecurityContext:
   runAsUser: 0
   runAsGroup: 0
 
-persistence:
-  config:
-    enabled: true
-    mountPath: "/config"
-  plugins:
-    enabled: true
-    mountPath: "/app/plugins.local"
-  themes:
-    enabled: true
-    mountPath: "/app/themes.local"
-
 env:
   TTRSS_SELF_URL_PATH: ""
   TTRSS_DB_NAME: "{{ .Values.postgresql.postgresqlDatabase }}"
@@ -42,6 +31,17 @@ service:
       main:
         port: 10104
         targetPort: 8080
+
+persistence:
+  config:
+    enabled: true
+    mountPath: /config
+  plugins:
+    enabled: true
+    mountPath: /app/plugins.local
+  themes:
+    enabled: true
+    mountPath: /app/themes.local
 
 postgresql:
   enabled: true
