--- a/charts/stable/kavita/Chart.yaml
+++ b/charts/stable/kavita/Chart.yaml
@@ -1,11 +1,11 @@
 apiVersion: v2
-kubeVersion: ">=1.16.0-0"
-name: kavita
-version: 4.0.7
 appVersion: "0.6.1"
-description: Kavita is a rocket fueled self-hosted digital library which supports a vast array of file formats
-type: application
+dependencies:
+  - name: common
+    repository: https://library-charts.truecharts.org
+    version: 11.1.2
 deprecated: false
+description: A rocket fueled self-hosted digital library which supports a vast array of file formats
 home: https://truecharts.org/charts/stable/kavita
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/kavita.png
 keywords:
@@ -13,18 +13,17 @@ keywords:
   - manga
   - library
   - book
-sources:
-  - https://github.com/truecharts/charts/tree/master/charts/stable/kavita
-  - https://www.kavitareader.com
-dependencies:
-  - name: common
-    repository: https://library-charts.truecharts.org
-    version: 11.1.2
-    # condition:
+kubeVersion: ">=1.16.0-0"
 maintainers:
   - email: info@truecharts.org
     name: TrueCharts
     url: https://truecharts.org
+name: kavita
+sources:
+  - https://github.com/truecharts/charts/tree/master/charts/stable/kavita
+  - https://www.kavitareader.com
+type: application
+version: 5.0.0
 annotations:
   truecharts.org/catagories: |
     - media
