--- a/charts/stable/kavita/templates/common.yaml
+++ b/charts/stable/kavita/templates/common.yaml
@@ -1,1 +1,9 @@
-{{ include "tc.common.loader.all" . }}
+{{/* Make sure all variables are set properly */}}
+{{- include "tc.common.loader.init" . }}
+
+{{- if .Values.email.enabled -}}
+{{- $_ := set .Values.additionalContainers "email" (include "kavita.email" . | fromYaml) -}}
+{{- end -}}
+
+{{/* Render the templates */}}
+{{ include "tc.common.loader.apply" . }}
